--- a/TASVideos/Pages/Diagnostics/SendTweet.cshtml
+++ b/TASVideos/Pages/Diagnostics/SendTweet.cshtml
@@ -3,6 +3,9 @@
 @{
 	ViewData["Title"] = "Send a tweet";
 }
+<ul>
+	<li><a asp-page="Index">Diagnostics</a></li>
+</ul>
 <form method="post">
 	<label asp-for="Text"></label>
 	<textarea asp-for="Text" rows="10" class="form-control" maxlength="280"></textarea>
