--- a/TASVideos/Pages/Diagnostics/CacheSet.cshtml
+++ b/TASVideos/Pages/Diagnostics/CacheSet.cshtml
@@ -3,6 +3,10 @@
 @{
 	ViewData["Title"] = "Set a cache value (only works on strings!)";
 }
+<ul>
+	<li><a asp-page="Index">Diagnostics</a></li>
+	<li><a asp-page="CacheControl" class="mt-2">Cache Control</a></li>
+</ul>
 <row>
 	<column md="6">
 		<form method="post">
