--- a/TASVideos/Pages/Shared/_Layout.cshtml
+++ b/TASVideos/Pages/Shared/_Layout.cshtml
@@ -10,14 +10,14 @@
 
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-	<link rel="stylesheet" href="/css/site.css" />
+	<link rel="stylesheet" href="/css/site-april.css" />
 	<link rel="stylesheet" id="style-dark-initial" href="/css/darkmode-initial.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
 		  integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw=="
 		  crossorigin="anonymous"
 		  referrerpolicy="no-referrer" />
 
-	<script src="~/js/site-head.js"></script>
+	<script src="~/js/site-head-april.js"></script>
 
 	<link rel="alternate" href="/news.rss" type="application/rss+xml" title="TASVideos RSS News Feed">
 	<link rel="alternate" href="/submissions.rss" type="application/rss+xml" title="TASVideos RSS Submission Feed">
@@ -32,7 +32,7 @@
 	{
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="TASVideos" />
-		<meta property="og:description" content="Tool-assisted game movies - When human skills are just not enough" />
+		<meta property="og:description" content="Tool Assisted Spinning - When human spinning is just not enough" />
 		<meta property="og:url" content="@Context.Request.ToUrl()" />
 		<meta property="og:image" content="@($"{Context.Request.ToBaseUrl()}/images/logo-embed.png")" />
 	}
@@ -71,8 +71,8 @@
 			</a>
 			<a id="mantra" asp-page="/Index">
 				<div id="brand">TASVideos</div>
-				<div id="mantra-1">Tool-assisted game movies</div>
-				<div id="mantra-2">When human skills are just not enough</div>
+				<div id="mantra-1">Tool Assisted Spinning</div>
+				<div id="mantra-2">When Human Spinning is Just Not Enough</div>
 			</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
