--- a/TASVideos/Pages/Publications/Edit.cshtml
+++ b/TASVideos/Pages/Publications/Edit.cshtml
@@ -86,7 +86,8 @@
 		<div class="col-lg-6">
 			<form-group>
 				<label asp-for="Publication.ObsoletedBy"></label>
-				<select asp-for="Publication.ObsoletedBy" asp-items="@UiDefaults.DefaultEntry.Concat(Model.AvailableMoviesForObsoletedBy)" class="form-control"></select>
+				<input asp-for="Publication.ObsoletedBy" class="form-control" />
+				<span>@Model.Publication.ObsoletedByTitle</span>
 				<span asp-validation-for="Publication.ObsoletedBy" class="text-danger"></span>
 			</form-group>
 			<form-group>
