--- a/TASVideos/Pages/Publications/Edit.cshtml
+++ b/TASVideos/Pages/Publications/Edit.cshtml
@@ -87,7 +87,20 @@
 			<form-group>
 				<label asp-for="Publication.ObsoletedBy"></label>
 				<input asp-for="Publication.ObsoletedBy" class="form-control" />
-				<span>@Model.Publication.ObsoletedByTitle</span>
+				<span id="obsoleted-by">@Model.Publication.ObsoletedByTitle</span>
+				<script>
+					const obsoletedByBox = document.getElementById("@Html.IdFor(m => m.Publication.ObsoletedBy)");
+					const titleSpan = document.getElementById("obsoleted-by");
+					obsoletedByBox.onchange = function() {
+						const url = `/Publications/Edit/@Model.Id?handler=Title&publicationId=${this.value}`;
+						fetch(url)
+							.then(handleFetchErrors)
+							.then(r => r.text())
+							.then(r => {
+								titleSpan.innerHTML = r ? r : "Unknown publication Id";
+							});
+					}
+				</script>
 				<span asp-validation-for="Publication.ObsoletedBy" class="text-danger"></span>
 			</form-group>
 			<form-group>
