replace a bunch of hardcoded instances of "HomePages/" with a constant

--- a/TASVideos/Pages/Profile/HomePage.cshtml
+++ b/TASVideos/Pages/Profile/HomePage.cshtml
@@ -4,7 +4,7 @@
 @{
 	ViewData["Title"] = "Home Page";
 	ViewData.AddActivePage(ProfileNavPages.HomePage);
-	var homePage = $"HomePages/{User.Name()}";
+	var homePage = $"{LinkConstants.HomePages}{User.Name()}";
 	bool pageExists = await _wikiPages.Exists(homePage);
 }
 <br />
