--- a/TASVideos/Pages/Profile/ChangeEmail.cshtml
+++ b/TASVideos/Pages/Profile/ChangeEmail.cshtml
@@ -1,6 +1,8 @@
 ﻿@page
 @model ChangeEmailModel
 @{
+	ViewData["Title"] = "Email Change Request";
+	ViewData.AddActivePage(ProfileNavPages.ChangeEmail);
 }
 
 <form method="post">
