--- a/TASVideos/Pages/Profile/_ProfileNav.cshtml
+++ b/TASVideos/Pages/Profile/_ProfileNav.cshtml
@@ -9,6 +9,9 @@
 		<a class="nav-link @ProfileNavPages.ChangePasswordNavClass(ViewContext)" asp-page="ChangePassword">Password</a>
 	</li>
 	<li class="nav-item">
+		<a class="nav-link @ProfileNavPages.ChangeEmailNavClass(ViewContext)" asp-page="ChangeEmail">Change Email</a>
+	</li>
+	<li class="nav-item">
 		<a class="nav-link @ProfileNavPages.HomePageNavClass(ViewContext)" asp-page="HomePage">Home Page</a>
 	</li>
 	<li class="nav-item">
