--- a/TASVideos/Pages/Forum/_CreatePostHelper.cshtml
+++ b/TASVideos/Pages/Forum/_CreatePostHelper.cshtml
@@ -8,6 +8,7 @@
 	<button type="button" class="btn bg-info text-dark btn-sm border-dark" tabindex="-1" data-fmt="[size=],[/size]">size</button>
 	<button type="button" class="btn bg-info text-dark btn-sm border-dark" tabindex="-1" data-fmt="[sub],[/sub]" data-key="="><sub>sub</sub></button>
 	<button type="button" class="btn bg-info text-dark btn-sm border-dark" tabindex="-1" data-fmt="[sup],[/sup]" data-skey="+"><sup>sup</sup></button>
+	<button type="button" class="btn bg-info text-dark btn-sm border-dark" tabindex="-1" data-fmt="[color=&quot;&quot;],[/color]">color</button>
 </div>
 
 <div class="btn-group mt-1 mb-1 flex-wrap">
