--- a/TASVideos/Pages/Forum/Posts/New.cshtml
+++ b/TASVideos/Pages/Forum/Posts/New.cshtml
@@ -13,7 +13,7 @@
 		<tr>
 			<th class="d-none d-md-table-cell">Forum</th>
 			<th>Topic</th>
-			<th>Posted At</th>
+			<th>Posted</th>
 			<th>Post</th>
 		</tr>
 		@foreach (var post in Model.Posts)
