Latest/New Posts - show as Topic list (#1247)
* poc of new posts page to be table based and a "bird's eye view"

* fix ups

* Simplify model

* asdf

* fix LatestPosts the same as New posts

* rename file

--- a/TASVideos/Pages/Forum/Posts/New.cshtml
+++ b/TASVideos/Pages/Forum/Posts/New.cshtml
@@ -9,17 +9,35 @@
 	<fullrow>
 		<partial name="_Pager" model="Model.Posts" />
 	</fullrow>
-	@foreach (var post in Model.Posts)
-	{
-		<fullrow class="pt-2">
-			<small>
-				<a asp-page="/Forum/Index">Forum</a> →
-				<a asp-page="/Forum/Subforum/Index" asp-route-id="@post.ForumId">@post.ForumName</a> →
-				<a asp-page="/Forum/Topics/Index" asp-route-id="@post.TopicId">@post.TopicTitle</a>
-			</small>
-		</fullrow>
-		<partial name="Forum/Topics/_TopicPost" model="post" />
-	}
+	<table class="table table-sm">
+		<tr>
+			<th class="d-none d-md-table-cell">Forum</th>
+			<th>Topic</th>
+			<th>Posted</th>
+			<th>Post</th>
+		</tr>
+		@foreach (var post in Model.Posts)
+		{
+			<tr>
+				<td class="d-none d-md-table-cell">
+					<a asp-page="/Forum/Subforum/Index" asp-route-id="@post.ForumId">@post.ForumName</a>
+				</td>
+				<td>
+					<a asp-page="/Forum/Topics/Index" asp-route-id="@post.TopicId">@post.TopicTitle</a>
+				</td>
+				<td>
+					<timezone-convert asp-for="@post.CreateTimestamp"/>
+				</td>
+				<td>
+					<a asp-page="/Forum/Posts/Index" asp-route-id="@post.Id"><i class="fa fa-bookmark-o"></i> @post.PosterName</a>
+					<br />
+					<small class="d-none d-md-inline-block">
+						@post.Text.CapAndEllipse(50)
+					</small>
+				</td>
+			</tr>
+		}
+	</table>
 	<fullrow class="mt-2">
 		<partial name="_Pager" model="Model.Posts" />
 	</fullrow>
