fix missing padding in the mobile search icon

--- a/TASVideos/Pages/Shared/_LoginPartial.cshtml
+++ b/TASVideos/Pages/Shared/_LoginPartial.cshtml
@@ -32,7 +32,7 @@
         <nav-item activate="Search">
             <form method="GET" action="/Search/Index">
                 <div class="input-group mt-1">
-                    <button type="submit" class="btn btn-sm border border-secondary nav-link">
+                    <button type="submit" class="btn btn-sm border border-secondary nav-link px-2">
                         <i class="fa fa-search"></i>
                     </button>
                     <input type="text" name="SearchTerms" class="form-control" />
