--- a/TASVideos/Pages/Search/Advanced.cshtml
+++ b/TASVideos/Pages/Search/Advanced.cshtml
@@ -1,14 +1,11 @@
 ﻿@page
-@model IndexModel
+@model AdvancedModel
 @{
-	ViewData["Title"] = "Search Wiki and Forums";
+	ViewData["Title"] = "Advanced Search";
 }
 
 <small>
-	@await Component.RenderWiki("System/SearchTerms")
-</small>
-<small>
-	For exact phrase searching try the <a asp-page="Advanced">Advanced Search</a>.
+	Performs a case-insensitive search using a regular expression.
 </small>
 <form method="get">
 	<row class="mt-3">
@@ -19,8 +16,8 @@
 				<span condition="PageContext.HttpContext.Request.QueryString.HasValue" asp-validation-for="SearchTerms" class="text-danger"></span>
 			</form-group>
 			<button type="submit" class="btn btn-primary">Search</button>
-			<a condition="Model.PageNumber > 1" asp-page="/Search/Index" class="btn btn-secondary" asp-route-searchterms="@Model.SearchTerms" asp-route-pagenumber="@(Model.PageNumber - 1)">Prev</a>
-			<a condition="Model.PageResults.Count > IndexModel.PageSize || Model.PostResults.Count > IndexModel.PageSize || Model.GameResults.Count > IndexModel.PageSize" asp-page="/Search/Index" class="btn btn-secondary" asp-route-searchterms="@Model.SearchTerms" asp-route-pagenumber="@(Model.PageNumber + 1)">Next</a>
+			<a condition="Model.PageNumber > 1" asp-page="/Search/Advanced" class="btn btn-secondary" asp-route-searchterms="@Model.SearchTerms" asp-route-pagenumber="@(Model.PageNumber - 1)">Prev</a>
+			<a condition="Model.PageResults.Count > AdvancedModel.PageSize || Model.PostResults.Count > AdvancedModel.PageSize || Model.GameResults.Count > AdvancedModel.PageSize" asp-page="/Search/Advanced" class="btn btn-secondary" asp-route-searchterms="@Model.SearchTerms" asp-route-pagenumber="@(Model.PageNumber + 1)">Next</a>
 		</column>
 	</row>
 </form>
@@ -30,7 +27,7 @@
 	<h4>Game Results:</h4>
 	<div class="table-container">
 		<table class="table table-striped table-bordered">
-			@foreach (var result in Model.GameResults.Take(IndexModel.PageSize))
+			@foreach (var result in Model.GameResults.Take(AdvancedModel.PageSize))
 			{
 				<tr>
 					<td>
@@ -51,14 +48,14 @@
 				<th>Page</th>
 				<td>Content</td>
 			</tr>
-			@foreach (var result in Model.PageResults.Take(IndexModel.PageSize))
+			@foreach (var result in Model.PageResults.Take(AdvancedModel.PageSize))
 			{
 				<tr>
 					<td>
 						<wiki-link page-name="@result.PageName"></wiki-link>
 					</td>
 					<td>
-						@Html.Raw(result.Highlight)
+						@result.Text
 					</td>
 				</tr>
 			}
@@ -75,14 +72,18 @@
 				<th>Post</th>
 				<td>Content</td>
 			</tr>
-			@foreach (var result in Model.PostResults.Take(IndexModel.PageSize))
+			@foreach (var result in Model.PostResults.Take(AdvancedModel.PageSize))
 			{
 				<tr>
 					<td>
 						<a href="/Forum/Posts/@result.PostId">@result.TopicName</a>
 					</td>
 					<td>
-						@Html.Raw(result.Highlight)
+						@{
+							var start = Math.Max(0, result.Index - 30);
+							var length = Math.Min(60, result.Text.Length - start);
+						}
+						@result.Text.Substring(start, length)
 					</td>
 				</tr>
 			}
