Implement advanced search with regex allowing for exact phrase searches (#1256)
* implement advanced search for exact phrase searches

* add conditional search and show more if only one is selected

* add topic title search to advanced search

* remove Npgsql check

--- a/TASVideos/Pages/Search/Index.cshtml
+++ b/TASVideos/Pages/Search/Index.cshtml
@@ -7,6 +7,9 @@
 <small>
 	@await Component.RenderWiki("System/SearchTerms")
 </small>
+<small>
+	For exact phrase searching try the <a asp-page="Advanced">Advanced Search</a>.
+</small>
 <form method="get">
 	<row class="mt-3">
 		<column lg="6">
