--- a/TASVideos/Pages/Games/Index.cshtml
+++ b/TASVideos/Pages/Games/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "{id}"
 @model IndexModel
 @{
-	ViewData["Title"] = $"{Model.Game.SystemCode} - {Model.Game.DisplayName}";
+	ViewData["Title"] = $"{Model.Game.DisplayName}";
 	string wiki = LinkConstants.GameWikiPage + Model.Id;
 	bool canEdit = WikiHelper.UserCanEditWikiPage(wiki, User.Name(), ViewData.UserPermissions());
 }
@@ -35,7 +35,7 @@
 				<row>
 					<column md="6">
 						<ul>
-							<li>Platform: @Model.Game.SystemCode</li>
+							<li>Platforms: @string.Join(", ", Model.Game.Roms.Select(rom => rom.SystemCode))</li>
 							<li>Abbreviation: @Model.Game.Abbreviation</li>
 							<li>Display Name: @Model.Game.DisplayName</li>
 							<li>GoodTools Name: @Model.Game.GoodName</li>
@@ -147,6 +147,7 @@
 			<th>Version</th>
 			<th>Sha1</th>
 			<th>Md5</th>
+			<th>Platform</th>
 		</tr>
 		@foreach (var rom in Model.Game.Roms)
 		{
@@ -157,6 +158,7 @@
 				<td>@rom.Version</td>
 				<td>@rom.Sha1</td>
 				<td>@rom.Md5</td>
+				<td>@rom.SystemCode</td>
 			</tr>
 		}
 	</table>
