show system in rom list

--- a/TASVideos/Pages/Games/Roms/List.cshtml
+++ b/TASVideos/Pages/Games/Roms/List.cshtml
@@ -4,7 +4,6 @@
 	ViewData["Title"] = $"Rom Hashes for {Model.Roms.GameDisplayName}";
 }
 
-<h4>System: @Model.Roms.SystemCode</h4>
 <h4>Game: <a asp-page="/Games/Index" asp-route-id="@Model.GameId">@Model.Roms.GameDisplayName</a></h4>
 <a asp-page="Edit" permission="CatalogMovies" asp-route-gameId="@Model.GameId" class="btn btn-primary"><i class="fa fa-plus"></i> Create</a>
 <hr />
@@ -16,6 +15,7 @@
 		<th>@Html.DisplayNameFor(m => m.Roms.Roms.First().RomType)</th>
 		<th>@Html.DisplayNameFor(m => m.Roms.Roms.First().Md5)</th>
 		<th>@Html.DisplayNameFor(m => m.Roms.Roms.First().Sha1)</th>
+		<th>@Html.DisplayNameFor(m => m.Roms.Roms.First().SystemCode)</th>
 		<th>Actions</th>
 	</tr>
 	@foreach (var rom in Model.Roms.Roms.OrderBy(r => r.DisplayName))
@@ -27,6 +27,7 @@
 			<td>@rom.RomType</td>
 			<td>@rom.Md5</td>
 			<td>@rom.Sha1</td>
+			<td>@rom.SystemCode</td>
 			<td>
 				<a asp-page="Edit" permission="CatalogMovies" asp-route-id="@rom.Id" asp-route-gameId="@Model.GameId" class="btn btn-primary"><i class="fa fa-pencil"></i> Edit</a>
 			</td>
