remove game system from ram addresses view

--- a/TASVideos/Pages/RamAddresses/Index.cshtml
+++ b/TASVideos/Pages/RamAddresses/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "{id}"
 @model IndexModel
 @{
-	ViewData["Title"] = $"Viewing RAM Addresses for {Model.SystemCode} {Model.GameName}";
+	ViewData["Title"] = $"Viewing RAM Addresses for {Model.GameName}";
 }
 
 @functions
