remove system from gamegroup view

--- a/TASVideos/Pages/GameGroups/Index.cshtml
+++ b/TASVideos/Pages/GameGroups/Index.cshtml
@@ -21,7 +21,7 @@
 		<tr>
 			<td>
 				<game-link id="game.Id">
-					@game.SystemCode @game.Name
+					@game.Name
 				</game-link>
 			</td>
 			<td>
