remove system from search and search results

--- a/TASVideos/Pages/Search/Advanced.cshtml
+++ b/TASVideos/Pages/Search/Advanced.cshtml
@@ -69,7 +69,7 @@
 			{
 				<tr>
 					<td>
-						<a asp-page="/Games/Index" asp-route-id="@result.Id">@result.SystemCode @result.DisplayName</a>
+						<a asp-page="/Games/Index" asp-route-id="@result.Id">@result.DisplayName</a>
 					</td>
 				</tr>
 			}
