fix extraneous paren

--- a/TASVideos/Pages/Publications/Catalog.cshtml
+++ b/TASVideos/Pages/Publications/Catalog.cshtml
@@ -43,7 +43,7 @@
 						<span asp-validation-for="Catalog.RomId" class="text-danger"></span>
 					</div>
 					<div class="col-2">
-						<button id="create-rom" type="button" class="btn btn-primary" )>New</button>
+						<button id="create-rom" type="button" class="btn btn-primary">New</button>
 					</div>
 				</row>
 			</form-group>
