--- a/TASVideos/Pages/Submissions/Publish.cshtml
+++ b/TASVideos/Pages/Submissions/Publish.cshtml
@@ -35,7 +35,7 @@
 				<row>
 					<label class="col-sm-3" asp-for="Submission.Rom"></label>
 					<span class="col-sm-9">
-						<a asp-page="/Games/Roms/Edit" asp-route-gameId="@Model.Submission.GameId" asp-route-romId="@Model.Submission.RomId">
+						<a asp-page="/Games/Roms/Edit" asp-route-gameId="@Model.Submission.GameId" asp-route-id="@Model.Submission.RomId">
 							<span class="col-sm-9">@Html.DisplayFor(m => m.Submission.Rom)</span>
 						</a>
 					</span>
