use new title_override column, make it editable, and show it in various places

--- a/TASVideos/Pages/Games/Index.cshtml
+++ b/TASVideos/Pages/Games/Index.cshtml
@@ -143,6 +143,7 @@
 		<tr>
 			<th>Type</th>
 			<th>Name</th>
+			<th>Title Override</th>
 			<th>Region</th>
 			<th>Version</th>
 			<th>Sha1</th>
@@ -154,6 +155,7 @@
 			<tr>
 				<td>@rom.Type.ToString()</td>
 				<td>@rom.Name</td>
+				<td>@rom.TitleOverride</td>
 				<td>@rom.Region</td>
 				<td>@rom.Version</td>
 				<td>@rom.Sha1</td>
