Replace every instance of Game.System and rework the logic to use GameRom.System (#1276)
* adjust main game view

* editing rom systems frontend and backend

* main game view small adjustment

* show system in rom list

* remove game system from edit rom

* remove system from game edit

* remove system column from game list

* remove game system from userfile views

* remove game system from ram addresses view

* userfiles can use their own saved system

* remove system from gamegroup view

* remove system from addresses wiki module

* remove system from displaygamename wiki module

* remove system from search and search results

* change queries to check the rom system instead of game system

* rewrite the conditions for publication catalog dropdowns

* rewrite the conditions for submission catalog dropdowns

* remove systemid sort in userfiles

* adjust systemid InUse function

* hack for ram addresses to remove the dependence of game systems

* fix style

* fix rom deletion redirect

* default game creation systemid to 1 to allow game creation, will be deleted when column is removed

* fix api calls and always show games without roms

* fix rom edit routing when publishing

--- a/TASVideos/Pages/Games/Roms/Edit.cshtml
+++ b/TASVideos/Pages/Games/Roms/Edit.cshtml
@@ -16,14 +16,17 @@
 	<delete-button condition="@Model.CanDelete"
 				   asp-href="@deleteLink"
 				   class="float-end">Delete</delete-button>
-	<h4>System: @Model.SystemCode</h4>
 	<h4>Game: @Model.GameName</h4>
 </form-group>
 <form method="post">
 	<input type="hidden" asp-for="GameName" />
-	<input type="hidden" asp-for="SystemCode" />
 	<row>
 		<div class="col-lg-6">
+			<form-group>
+				<label asp-for="Rom.SystemCode"></label>
+				<select asp-for="Rom.SystemCode" asp-items="@Model.AvailableSystems.OrderBy(s => s.Value)" class="form-control"></select>
+				<span asp-validation-for="Rom.SystemCode" class="text-danger"></span>
+			</form-group>
 			<form-group>
 				<label asp-for="Rom.Name"></label>
 				<input type="text" asp-for="Rom.Name" class="form-control" autocomplete="off" />
