add game rewire page

--- a/TASVideos/Pages/Games/List.cshtml
+++ b/TASVideos/Pages/Games/List.cshtml
@@ -7,6 +7,7 @@
 }
 
 <a asp-page="Edit" permission="CatalogMovies" class="btn btn-primary mb-3 float-end"><i class="fa fa-plus"></i> Create</a>
+<a asp-page="Rewire" permission="RewireGames" class="btn btn-primary mb-3 float-end me-1"><i class="fa fa-wrench"></i> Rewire</a>
 <form class="row">
 	<div class="col-lg-5 col-12 mb-1">
 		<div class="input-group">
