SubPages module - fix bug where if parent page is contained in subpage name it was removed, also use System/IsSystemPage not System/IsSystem/Page

--- a/TASVideos/Pages/Shared/Components/ListSubPages/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/ListSubPages/Default.cshtml
@@ -3,7 +3,7 @@
 	var pageId = ViewData.UniqueId();
 
 	var parent = ViewData["Parent"]?.ToString();
-	var pageGrouping = Model!.GroupBy(tkey => tkey.Replace(parent + "/", "").Split('/').FirstOrDefault());
+	var pageGrouping = Model.GroupBy(tkey => tkey.ReplaceFirst(parent + "/", "").Split('/').FirstOrDefault());
 
 	var show = (bool)(ViewData["show"] ?? false);
 }
