--- a/TASVideos/Pages/Shared/Components/SystemPageHeader/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/SystemPageHeader/Default.cshtml
@@ -1,4 +1,4 @@
 ﻿@model WikiPage
 <info-alert>
-	@await Component.RenderWiki("System/IsSystem/Page")
+	@await Component.RenderWiki("System/IsSystemPage")
 </info-alert>
