Profile - don't divide total ratings by 2, leftover logic from when technical ratings were a thing, fixes #1289

--- a/TASVideos/Pages/Shared/_Profile.cshtml
+++ b/TASVideos/Pages/Shared/_Profile.cshtml
@@ -207,7 +207,7 @@
 						Total Movies Rated:
 						<a asp-page="/Users/Ratings"
 							asp-route-userName="@Model.UserName">
-							@(Model.Ratings.TotalMoviesRated / 2.0)
+							@Model.Ratings.TotalMoviesRated
 						</a>
 					</label>
 					<br />
