--- a/TASVideos/Pages/Games/Roms/List.cshtml
+++ b/TASVideos/Pages/Games/Roms/List.cshtml
@@ -13,7 +13,7 @@
 		<th>@Html.DisplayNameFor(m => m.Roms.Roms.First().TitleOverride)</th>
 		<th>@Html.DisplayNameFor(m => m.Roms.Roms.First().Version)</th>
 		<th>@Html.DisplayNameFor(m => m.Roms.Roms.First().Region)</th>
-		<th>@Html.DisplayNameFor(m => m.Roms.Roms.First().RomType)</th>
+		<th>@Html.DisplayNameFor(m => m.Roms.Roms.First().VersionType)</th>
 		<th>@Html.DisplayNameFor(m => m.Roms.Roms.First().Md5)</th>
 		<th>@Html.DisplayNameFor(m => m.Roms.Roms.First().Sha1)</th>
 		<th>@Html.DisplayNameFor(m => m.Roms.Roms.First().SystemCode)</th>
@@ -26,7 +26,7 @@
 			<td>@rom.TitleOverride</td>
 			<td>@rom.Version</td>
 			<td>@rom.Region</td>
-			<td>@rom.RomType</td>
+			<td>@rom.VersionType</td>
 			<td>@rom.Md5</td>
 			<td>@rom.Sha1</td>
 			<td>@rom.SystemCode</td>
