--- a/TASVideos/Pages/Games/List.cshtml
+++ b/TASVideos/Pages/Games/List.cshtml
@@ -38,7 +38,7 @@
 			<td>
 				<a asp-page="Index" asp-route-id="@game.Id" class="btn btn-sm btn-secondary"><i class="fa fa-eye"></i> View</a>
 				<a asp-page="Edit" permission="CatalogMovies" asp-route-id="@game.Id" class="btn btn-primary btn-sm"><i class="fa fa-pencil"></i> Edit</a>
-				<a asp-page="Roms/List" asp-route-gameId="@game.Id" class="btn btn-secondary btn-sm"><i class="fa fa-pencil"></i> Roms</a>
+				<a asp-page="Versions/List" asp-route-gameId="@game.Id" class="btn btn-secondary btn-sm"><i class="fa fa-pencil"></i> Versions</a>
 			</td>
 		</tr>
 	}
