--- a/TASVideos/Pages/Games/Versions/Edit.cshtml
+++ b/TASVideos/Pages/Games/Versions/Edit.cshtml
@@ -1,10 +1,10 @@
-﻿@page "/Games/{gameId}/Roms/Edit/{id?}/{handler?}"
+﻿@page "/Games/{gameId}/Versions/Edit/{id?}/{handler?}"
 @model EditModel
 @{
 	ViewData["Title"] = Model.Id.HasValue
 		? $"Editing Game Version #{Model.Id} {Model.Rom.Name}"
-		: "Create A New Rom Entry";
-	var deleteLink = $"/Games/{Model.GameId}/Roms/Edit/{Model.Id ?? 0}/Delete";
+		: "Create A New Game Version Entry";
+	var deleteLink = $"/Games/{Model.GameId}/Versions/Edit/{Model.Id ?? 0}/Delete";
 	string returnUrl = HttpContext.Request.ReturnUrl();
 }
 
@@ -69,7 +69,7 @@
 	<div class="text-center">
 		<button id="submit-btn" type="submit" class="btn btn-primary"><i class="fa fa-save"></i> Update</button>
 		<a condition="!string.IsNullOrWhiteSpace(returnUrl)" href="@returnUrl" class="btn btn-secondary"><i class="fa fa-times"></i> Cancel</a>
-		<a condition="string.IsNullOrWhiteSpace(returnUrl)" asp-page="/Games/Roms/List" class="btn btn-secondary" asp-route-gameId="@Model.GameId"><i class="fa fa-times"></i> Cancel</a>
+		<a condition="string.IsNullOrWhiteSpace(returnUrl)" asp-page="/Games/Versions/List" class="btn btn-secondary" asp-route-gameId="@Model.GameId"><i class="fa fa-times"></i> Cancel</a>
 	</div>
 </form>
 
